Project_1/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-app-deployment
  namespace: notes-app
  labels:
    app.kubernetes.io/name: notes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: notes-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: notes-app
    spec:
      containers:
        - name: notes-app
          image: shadowlord13/django-notes-app-mini
          ports:
            - containerPort: 8000
