Project_1/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-app-nginx-ingress
  namespace: notes-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: notes-app-service
                port:
                  number: 8000
